--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -17,6 +17,7 @@
       <%= f.input :h_link, label: 'Product URL' %>
       <%= f.input :h_title , label: 'Title Of Product' %>
       <%= f.input :h_spare_04, label: 'Image_Title' %>
+      <%= f.input :h_spare_05, label: 'Hashtags' %>
       <!-- <%= f.input :h_keyword, label: ', gadgets, amazon, recommended, under' %> -->
       <!-- <%= f.input :h_spare_11, label: 'Korean Title' %>  -->
     </div>
@@ -30,8 +31,8 @@
       <%= f.input :h_spare_09, label: 'Number of Reviews' %>
       <%= f.input :h_spare_61, label: 'Coupon(%)' %>
       <%= f.input :h_spare_62, label: 'Coupon($)' %>
-      <%= f.input :h_spare_45, label: 'Last Discount Price' %>
-      <%= f.input :h_spare_05, label: 'Hashtags' %>
+      <!-- <%= f.input :h_spare_45, label: 'Last Discount Price' %> -->
+      
       <!-- <%= f.input :h_spare_01, label: 'Extra Deals?' %> -->
       <!--<%= f.input :h_list_price, label: '(Old)List Price' %>
       <%= f.input :h_price, label: '(Old)Current Price' %>-->
@@ -43,7 +44,7 @@
     </div>
     <!-- <%= f.input :h_spare_92, label: '( US Time Zone )' %><br /> -->
     <!-- <%= f.input :h_description, label: 'Description Of Product' %> -->
-    <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
+    <!-- <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %> -->
 
     <div class="form_btn"><%= f.button :submit %></div>
 
