--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -128,6 +128,7 @@
 .show_wrap .show_box .show_img .admin{margin-top:30px;padding:10px;border:1px solid;}
 .show_wrap .show_box .show_img .admin a{background:none;color:#fff;background:#000;padding:1px 5px;}
 .show_wrap .show_box .show_img .admin .sharing{font-size:10px;margin-top:10px;}
+.show_wrap .show_box .show_img .admin .sharing button{padding:3px;background:#08f;color:#fff;}
 .hotdeal_related{width:1000px;margin:30px auto 0 auto;font-family: 'Montserrat', sans-serif;}
 .hotdeal_related p{text-align:center;font-size:30px;margin-bottom:20px;}
 
