--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,8 +54,8 @@
   </head>
   <body>
 
-   <p class="notice"><%= notice %></p>
-   <p class="alert"><%= alert %></p>
+   <!-- <p class="notice"><%= notice %></p>
+   <p class="alert"><%= alert %></p> -->
 
   <%= render 'shared/new_header' %>
   <%= yield %> 
