--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -182,6 +182,8 @@
 .sd_com{margin:0;}
 .more_search{margin-top:15px;}
 .more_search input{width:35%;height:40px;padding:0 10px;}
+.macro_new_bargain{background:#3bcd17;padding:3px 5px;width:200px;border-radius:15px;}
+.macro_new_bargain a{color:#fff;display:block;text-align:center;}
 
 .deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;height:340px;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
