--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -127,6 +127,8 @@
 .show_wrap .show_box .show_img .show_tag h3 a{background:#000;color:#fff;padding:5px 10px;border-radius:15px;font-size:13px;line-height:2.4;}
 .show_wrap .show_box .show_img .admin{margin-top:30px;padding:10px;border:1px solid;}
 .show_wrap .show_box .show_img .admin a{background:none;color:#fff;background:#000;padding:1px 5px;}
+.show_wrap .show_box .show_img .admin a.facebook{background:#3b5998;}
+.show_wrap .show_box .show_img .admin a.admin_back_btn{background:#87c543;}
 .show_wrap .show_box .show_img .admin .sharing{font-size:10px;margin-top:10px;}
 .show_wrap .show_box .show_img .admin .sharing button{padding:3px;background:#08f;color:#fff;}
 .hotdeal_related{width:1000px;margin:30px auto 0 auto;font-family: 'Montserrat', sans-serif;}
