--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -130,7 +130,7 @@
 .show_wrap .show_box .show_img .admin a.facebook{background:#3b5998;}
 .show_wrap .show_box .show_img .admin a.admin_back_btn{background:#87c543;}
 .show_wrap .show_box .show_img .admin .sharing{font-size:10px;margin-top:10px;}
-.show_wrap .show_box .show_img .admin .sharing button{padding:3px;background:#08f;color:#fff;}
+.show_wrap .show_box .show_img .admin .sharing button{padding:3px;background:#c70851;color:#fff;margin-top:15px;}
 .hotdeal_related{width:1000px;margin:30px auto 0 auto;font-family: 'Montserrat', sans-serif;}
 .hotdeal_related p{text-align:center;font-size:30px;margin-bottom:20px;}
 
