--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -153,6 +153,10 @@
 .show_wrap .show_box .show_inner .sharing{text-align:center;margin-top:7px;}
 .show_wrap .show_box .show_inner .sharing a{padding:5px;}
 
+.show_wrap .show_box .show_inner .admin_macro_btn{text-align:center;}
+.show_wrap .show_box .show_inner .admin_macro_btn a{padding:5px;width:90px;}
+.show_wrap .show_box .show_inner .admin_macro_btn button{background:#000;color:#fff;padding:5px;width:90px;border-radius:15px;}
+
 .show_wrap .show_box_down{width:1000px;margin:60px auto 0 auto;}
 .show_wrap .show_box_down h2{margin:0 0 1% 1%;border-bottom:1px solid #616161;width:200px;}
 .show_wrap .show_box_down .sbd_box{float:left;width:23%;margin:0 1%;}
