--- a/app/views/shared/_new_header.html.erb
+++ b/app/views/shared/_new_header.html.erb
@@ -20,7 +20,7 @@
         <div class="nav-wrapper">
           <ul>
             <li><a href="/">Bargain</a></li>
-            <li><a href="gadgets">Gadgets</a></li>
+            <li><a href="/gadgets">Gadgets</a></li>
             <!-- <li><a href="/gadgets">Gadgets</a></li> -->
             <li><a href="/recommends">Featured</a></li>
           </ul>
