--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -62,8 +62,7 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 .mobile_btn{display:none;}
 
 .show_back{position:absolute;top:-10px;left:27px;opacity:0.5;z-index:999;}
-.show_back a{}
-.show_back a img{width:30px;}
+.show_back button img{width:30px;}
 
 @media screen and (max-width:640px){
   .oh_menu,
