--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -63,6 +63,7 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 
 .show_back{position:absolute;top:-10px;left:27px;opacity:0.5;z-index:999;}
 .show_back button img{width:30px;}
+.hotdeal_hashtag_p button img{margin-top:15px;}
 
 @media screen and (max-width:640px){
   .oh_menu,
