back btn and more

--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -258,7 +258,7 @@
   .deals_card .image_box .exprie p{margin-top:6px;}
   .deals_card .image_box .term p{font-size:10px;line-height:1.2;font-weight:bold;}
   .deals_card h3{font-size:14px;}
-  /*.deals_card p{font-size:13px;line-height:1.2;height:3.6em;}*/
+  .deals_card p{font-size:10px;}
   .deals_card .price{font-size:15px;}
   /*.deals_card .m_btn{display:block;padding:3px;}
   .deals_card .m_btn a{font-size:14px;}*/
