--- a/app/views/hotdeals/hashtags.html.erb
+++ b/app/views/hotdeals/hashtags.html.erb
@@ -4,12 +4,13 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <div class="show_back hotdeal_hashtag_p">
-      <button onclick="goBack()"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></button>
+      <a href="/recommends"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></a>
+      <!-- <button onclick="goBack()"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></button>
       <script>
         function goBack() {
           window.history.back();
         }
-      </script>
+      </script> -->
     </div>
     <!-- <%= render 'shared/header_amazon' %> -->
     
