--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -2,12 +2,13 @@
 <div class="layout">
   <div class="show_wrap clearfix">
     <div class="show_back">
-      <button onclick="goBack()"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></button>
+      <a href="/hotdeals"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></a>
+      <!-- <button onclick="goBack()"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></button>
       <script>
         function goBack() {
           window.history.back();
         }
-      </script>
+      </script> -->
     </div>
     <div class="wrap">
     <div class="oh_menu">
