--- a/app/views/recommends/_navbar.html.erb
+++ b/app/views/recommends/_navbar.html.erb
@@ -10,7 +10,7 @@
       <li><button class="filter-button btn btn-md white-text top_10" data-filter="outdoor">Outdoor</button></li>
       <li><button class="filter-button btn btn-md white-text top_10" data-filter="geeky">Geeky</button></li>
       
-      <input type="text" class="form-control" placeholder="Search gift you want to">
+      <input type="text" class="form-control" placeholder="Search...">
     </div>
   </div>
   
