--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -62,6 +62,8 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 .mobile_btn{display:none;}
 
 .show_back{position:absolute;top:-10px;left:27px;opacity:0.5;z-index:999;}
+.show_back a{}
+.show_back a img{width:30px;margin-top:15px;}
 .show_back button img{width:30px;}
 .hotdeal_hashtag_p button img{margin-top:15px;}
 
