--- a/app/views/promocodes/_body_sns.html.erb
+++ b/app/views/promocodes/_body_sns.html.erb
@@ -3,9 +3,9 @@
  onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"  target="_blank" title="Share on Facebook"><!-- <li><i class="fa fa-facebook"></i> --><span>Facebook</span></a> | 
 <script type="text/javascript">document.getElementById("shareFB").setAttribute("href", "https://www.facebook.com/sharer/sharer.php?u=" + document.URL);</script>
 
-<a class="twitter" href="https://twitter.com/share?url=<%= url_for([@promocode, { 
+<!-- <a class="twitter" href="https://twitter.com/share?url=<%= url_for([@promocode, { 
 only_path: false }]) %>&via=ohigottabuythis&text=<%= @promocode.p_title %>"
 onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
 target="_blank" title="Share on Twitter">
 <span>Twitter</span>
-</a>
+</a> -->
