--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -3,9 +3,9 @@
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-    <%= f.input :pimage, label: 'Choose Image' %>
+    <!-- <%= f.input :pimage, label: 'Choose Image' %> -->
     <!-- <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%> -->
-    <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stocks left"])%>
+    <!-- <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stocks left"])%> -->
     <!-- <%= f.select :p_spare_05, options_for_select([["Subscribe & Save?", ""], "Yes"])%> -->
     <!-- <%= f.select :p_spare_10, options_for_select([["Yes, It's Free shipping", ""], "No, It's not"]) %><br /><br /> -->
     <!-- <%= f.select :p_spare_01, options_for_select([["Ship to Korea", ""], "Yes"])%> -->
@@ -18,7 +18,7 @@
       <%= f.input :p_image, label: 'Image URL' %>
       <%= f.input :p_link, label: 'Product URL' %>
       <%= f.input :p_title , label: 'Title Of Product' %>
-      <%= f.input :p_image_title, label: 'Image_Title' %>
+      <!-- <%= f.input :p_image_title, label: 'Image_Title' %> -->
       <!-- <%= f.input :p_keyword, label: ', gadgets, amazon, recommended, promo code, coupon, under' %> -->
       <!-- <%= f.input :p_spare_06, label: 'Korean Title' %>   -->
     </div>
@@ -43,7 +43,7 @@
     <!-- <%= f.input :p_spare_52, label: 'For New Sticker' %><br /> -->
 
     <!-- <%= f.input :p_description, label: 'Description Of Product' %> -->
-    <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>
+    <!-- <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %> -->
 
     <div class="form_btn"><%= f.button :submit %></div>
 
