--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -9,7 +9,7 @@
 
       <div class="more_search"><%= form_for "",url: hotdeals_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></div>    
 
-      <% if can? :update, @promocodes %>
+      <% if can? :update, @hotdeals %>
         <div class="macro_new_bargain">
           <%= link_to 'New Bargain', new_hotdeal_path %>
         </div>  
